--- a/index.html
+++ b/index.html
@@ -165,33 +165,28 @@
 
             <div class="row row-cols-lg-4 row-cols-md-3 row-col-sm-2 row-col-1 justify-content-center">
                 <div class="col mt-3">
-                    <a href="img/galery/prewed-1.jpg" data-toggle="lightbox" data-caption="Niken & Febri 1" data-galery="mygalery">
-                        <img src="img/galery/thumbnail/prewed-1.jpg" alt="Niken & Febri 1" class="img-fluid w-100 rounded">
+                    <a href="img/galery/prewed-2.jpg" data-toggle="lightbox" data-caption="Niken & Febri 1" data-galery="mygalery">
+                        <img src="img/galery/thumbnail/prewed-2.jpg" alt="Niken & Febri 1" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
-                    <a href="https://picsum.photos/id/300/1200/768 " data-toggle="lightbox" data-caption="Niken & Febri 2" data-galery="mygalery">
-                        <img src="https://picsum.photos/id/300/400" alt="Niken & Febri 2" class="img-fluid w-100 rounded">
+                    <a href="img/galery/prewed-3.jpg" data-toggle="lightbox" data-caption="Niken & Febri 2" data-galery="mygalery">
+                        <img src="img/galery/prewed-3.jpg" alt="Niken & Febri 2" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
-                    <a href="https://picsum.photos/id/301/1200/768"data-toggle="lightbox" data-caption="Niken & Febri 3" data-galery="mygalery">
-                        <img src="https://picsum.photos/id/301/300/400" alt="Niken & Febri 3" class="img-fluid w-100 rounded">
+                    <a href="img/galery/prewed-4.jpg"data-toggle="lightbox" data-caption="Niken & Febri 3" data-galery="mygalery">
+                        <img src="img/galery/thumbnail/prewed-4.jpg" alt="Niken & Febri 3" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
-                    <a href="https://picsum.photos/id/302/1200/768" data-toggle="lightbox" data-caption="Niken & Febri 4" data-galery="mygalery">
-                        <img src="https://picsum.photos/id/302/300/400" alt="Niken & Febri 4" class="img-fluid w-100 rounded">
+                    <a href="img/galery/prewed-5.jpg" data-toggle="lightbox" data-caption="Niken & Febri 4" data-galery="mygalery">
+                        <img src="img/galery/thumbnail/prewed-5.jpg" alt="Niken & Febri 4" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
-                    <a href="https://picsum.photos/id/306/1200/768" data-toggle="lightbox" data-caption="Niken & Febri 5" data-galery="mygalery">
-                        <img src="https://picsum.photos/id/306/300/400" alt="Niken & Febri 5" class="img-fluid w-100 rounded">
-                    </a>
-                </div>
-                <div class="col mt-3">
-                    <a href="https://picsum.photos/id/304/1200/768" data-toggle="lightbox" data-caption="Niken & Febri 6" data-galery="mygalery">
-                        <img src="https://picsum.photos/id/304/300/400" alt="Niken & Febri 6" class="img-fluid w-100 rounded">
+                    <a href="img/galery/prewed-6.jpg" data-toggle="lightbox" data-caption="Niken & Febri 5" data-galery="mygalery">
+                        <img src="img/galery/thumbnail/prewed-6.jpg" alt="Niken & Febri 5" class="img-fluid w-100 rounded">
                     </a>
                 </div>
             </div>
