--- a/index.html
+++ b/index.html
@@ -159,34 +159,33 @@
                 <div class="col-md-8 col-10 text-center">
                     <span>Memori Kisah Kami</span>
                     <h2>Galery Foto</h2>
-                    <p>Lorem Ipsum</p>
                 </div>
             </div>
 
             <div class="row row-cols-lg-4 row-cols-md-3 row-col-sm-2 row-col-1 justify-content-center">
                 <div class="col mt-3">
-                    <a href="img/galery/prewed-2.jpg" data-toggle="lightbox" data-caption="Niken & Febri 1" data-galery="mygalery">
-                        <img src="img/galery/thumbnail/prewed-2.jpg" alt="Niken & Febri 1" class="img-fluid w-100 rounded">
+                    <a href="img/galery/prewed-5.jpg" data-toggle="lightbox" data-caption="Niken & Febri 1" data-galery="mygalery">
+                        <img src="img/galery/thumbnail2/foto1.jpg" alt="Niken & Febri 1" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
                     <a href="img/galery/prewed-3.jpg" data-toggle="lightbox" data-caption="Niken & Febri 2" data-galery="mygalery">
-                        <img src="img/galery/prewed-3.jpg" alt="Niken & Febri 2" class="img-fluid w-100 rounded">
+                        <img src="img/galery/thumbnail2/foto3.jpg" alt="Niken & Febri 2" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
                     <a href="img/galery/prewed-4.jpg"data-toggle="lightbox" data-caption="Niken & Febri 3" data-galery="mygalery">
-                        <img src="img/galery/thumbnail/prewed-4.jpg" alt="Niken & Febri 3" class="img-fluid w-100 rounded">
+                        <img src="img/galery/thumbnail2/foto5.jpg" alt="Niken & Febri 3" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
                     <a href="img/galery/prewed-5.jpg" data-toggle="lightbox" data-caption="Niken & Febri 4" data-galery="mygalery">
-                        <img src="img/galery/thumbnail/prewed-5.jpg" alt="Niken & Febri 4" class="img-fluid w-100 rounded">
+                        <img src="img/galery/thumbnail2/foto1.jpg" alt="Niken & Febri 4" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
                     <a href="img/galery/prewed-6.jpg" data-toggle="lightbox" data-caption="Niken & Febri 5" data-galery="mygalery">
-                        <img src="img/galery/thumbnail/prewed-6.jpg" alt="Niken & Febri 5" class="img-fluid w-100 rounded">
+                        <img src="img/galery/thumbnail2/foto2.jpg" alt="Niken & Febri 5" class="img-fluid w-100 rounded">
                     </a>
                 </div>
             </div>
@@ -238,7 +237,7 @@
                 <div class="col-md-8 col-10 text-center">
                     <span>Ungkapan Tanda Kasih</span>
                     <h2>Kirim Hadiah</h2>
-                    <p>Lorem Ipsum</p>
+                    <p>Doa Restu Anda merupakan karunia yang sangat berarti bagi kami. dan jika memberi adalah ungkapan tanda kasih anda, amda dapat memberi kado secara cashless.</p>
                 </div>
             </div>
             <div class="row justify-content-center text-center"></div>
