--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="hero" 
         class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
         <main>
-            <h4>Kepada Bapak/Ibu/Saudara/I, </h4>
+            <h4>Kepada Bapak/Ibu/Saudara/I, <span></span></h4>
             <h1>Niken Silfaul & Febri Setiawan</h1>
             <p>Akan Melangsungkan Resepsi Pernikahan Dalam:</p>
             <div class="simply-countdown"></div>
@@ -125,7 +125,7 @@
                       </div>
                     </div>
                     <div class="card-footer">
-                      Saat acara Akad dimohon Kondusif menjaga Kehidmatan dan kehusuan seluruh prosesi.
+                      
                     </div>
                   </div>
             </div>
@@ -145,7 +145,7 @@
                       </div>
                     </div>
                     <div class="card-footer">
-                      Saat acara Akad dimohon Kondusif menjaga Kehidmatan dan kehusuan seluruh prosesi.
+                      
                     </div>
                   </div>
             </div>
@@ -229,6 +229,30 @@
                     <button class="btn btn-primary">Kirim</button>
                 </div>
             </form>
+
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-6">
+                    <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://wedding-niken-febri.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                </div>
+            </div>
         </div>
     </section>
     <section id="gift" class="gift">
@@ -314,8 +338,8 @@
     <script>
         const rootElement = document.querySelector(":root");
         const audioIconWrapper = document.querySelector('.audio-icon-wrapper');
-        let isPlaying = false;
         const song= document.querySelector('#song');
+        let isPlaying = false;
 
         function disableScroll() {
             const scrollTop = window.pageXOffset || document.documentElement.scrollTop;
