--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         </div>
                         <div class="col-md-6">
                             <i class="bi bi-calendar3 d-block"></i>
-                            <span>Minggu, 15 Februari 2024</span>
+                            <span>Kamis, 15 Februari 2024</span>
                         </div>
                       </div>
                     </div>
@@ -140,7 +140,7 @@
                         </div>
                         <div class="col-md-6">
                             <i class="bi bi-calendar3 d-block"></i>
-                            <span>Minggu, 15 Februari 2024</span>
+                            <span>Kamis, 15 Februari 2024</span>
                         </div>
                       </div>
                     </div>
